# SpaceShooter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
game/: CMakeLists.txt  build.bat  main.cpp  test.cpp
game/include/: Game.h  Object.h  Scene.h  SceneMain.h
game/src/: Game.cpp  SceneMain.cpp
